Fix icon 1em is more than text 1em causing a pixel gap in the nav

--- a/src/Korobi/WebBundle/Resources/assets/sass/application/_header.scss
+++ b/src/Korobi/WebBundle/Resources/assets/sass/application/_header.scss
@@ -61,11 +61,15 @@ nav.navigation {
         color: #eee;
         text-decoration: none;
         @include transition(all 0.3s);
-      }
 
-      a:hover,
-      a:focus {
-        background-color: $active-nav-background-color;
+        &:hover,
+        &:focus {
+          background-color: $active-nav-background-color;
+        }
+
+        i.fa {
+          font-size: 0.9em;
+        }
       }
     }
 
